Displaying widget - Stop scrollbar from appearing for height/width

--- a/style.css
+++ b/style.css
@@ -96,6 +96,6 @@ button:focus-visible {
 }
 
 iframe {
-  height: 2000px;
-  width: 2000px;
+  height: 100vh;
+  width: 100vh;
 }
